<resources>
    <string name="app_name">GoodJob</string>
    <string name="title_home">Inicio</string>
    <string name="title_profile">Perfil</string>
    <string name="title_premiun">Premiun</string>
    <string name="title_estado_mis_actividades">Mis Actividades</string>

    <!-- strings for fragment home -->

    <string name="title">Titulo</string>
    <string name="author">Publicante :</string>
    <string name="author_name">Nombre Publicante</string>
    <string name="participants_counter">actuales / necesarios</string>
    <string name="short_description">Breve descripción</string>
    <string name="separator"> / </string>
    <string name="more_info"> Más información...</string>

    <!-- string for details and apply fragment -->
    <string name="creation_date">Día de publicación :</string>
    <string name="end_date">Día a realizarse :</string>
    <string name="apply">Postular a esta actividad!</string>
    <string name="estado">Estado</string>

    <!-- strings for fragment selectedRegister-->
    <string name="user">Soy Usuario</string>
    <string name="company">Soy Empresa</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="Tvuser">Ingrese Usuario...</string>
    <string name="TvPass">Ingrese Contraseña...</string>
    <string name="TvRegister">Registrate Aquí</string>

    <!-- strings for fragment formRegisterUser-->
    <string name="Form_First_Name">Nombre:</string>
    <string name="Form_Last_Name">Apellidos:</string>
    <string name="Form_DNI">DNI/PASAPORTE:</string>
    <string name="Form_Fech_Nac">Fecha de Nacimiento:</string>
    <string name="Form_Phone">Celular:</string>
    <string name="Form_Pass">Contraseña:</string>
    <string name="Form_Profile">Perfil Profesional:</string>
    <string name="Form_btn_Register">Registrarse</string>
    <string name="Form_btn_Noregister">Cancelar</string>
    <string name="Acept_Ter_Con">Aceptas Términos y Condiciones.</string>

    <!-- strings for fragment formRegisterCompany-->
    <string name="Form_Name_Company">Razón Social:</string>
    <string name="Form_RUC_Company">RUC:</string>
    <string name="Form_Area_Company">Área:</string>
    <string name="Form_cellphone_Company">Teléfono-Celular</string>
    <string name="Form_Pass_Company">Contraseña:</string>

    <!-- string resources -->
    <string name="incorrect_user">Usuario y/o Contraseña incorrectas</string>
    <string name="already_in">Ya has postulado a esta actividad!</string>
    <string name="no_more_available_activities">No cuentas con más participaciones disponibles para aplicar a esta actividad</string>
    <string name="should_start_session">Debes iniciar sesión para realizar esta operación</string>
    <string name="postulacion_exitosa">Gracias por aplicar a esta actividad!</string>
    <string name="inicio_sesion">Inicio de Sesión</string>
    <string name="iniciar_sesion">Debes iniciar sesión para visualizar tus actividades</string>
    <string name="ok_sesion">Iniciar Sesión</string>

    <!-- string para fragment Actividad Aceptada -->
    <string name="participantes">Participantes</string>
    <string name="reputacion">Reputación</string>

    <!-- strings para perfil fragment -->
    <string name="puntaje">Puntaje</string>
    <string name="contactar">Contactar</string>

    <!-- resources for suscription -->
    <string name="plan_titulo">Descubre más oportunidades con Premium</string>
    <string name="plan_1">Postula a todas las actividades</string>
    <string name="plan_2">Decora tu perfil con stickers</string>
    <string name="plan_3">Desbloquea medallas por colaborar</string>
    <string name="plan_4">Destaca entre los demás</string>
    <string name="plan_5">Sé el responsable del grupo con más frecuencia</string>
    <string name="plan_6">Y mucho más &#8230;</string>
    <string name="plan_compra_1">1 mes&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;39 PEN</string>
    <string name="plan_compra_2">6 meses&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;169 PEN</string>
    <string name="plan_compra_3">1 año&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;319 PEN</string>

    <!-- strings for publicar actividad -->
    <string name="Nombre_de_la_Actividad">Nombre de la Actividad</string>
    <string name="Descripcion_de_la_Actividad">Descripción de la Actividad</string>
    <string name="Fecha_Inicio">Fecha Inicio</string>
    <string name="fecha_realizarse">Día a realizarse</string>
    <string name="Tiempo_de_Expiracion">Tiempo de Expiración</string>
    <string name="Cantidad_de_Integrantes">Cantidad de Integrantes</string>
    <string name="Recompensa">Recompensa</string>

    <!-- string for fragment pre actividades -->
    <string name="mis_postulaciones">Mis postulaciones</string>
    <string name="mis_publicaciones">Mis publicaciones</string>

    <!-- string for fragment mis publicaciones -->
    <string name="postulantes_cantidad">Postulantes</string>

    <!-- strings for detalle mi publicacion fragment -->
    <string name="postulantes">Postulantes</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="icono_nombre_actividad">icono_nombre_actividad</string>
    <string name="icono_descripcion_actividad">icono_descripcion_actividad</string>
    <string name="icono_fecha_realizarse">icono_fecha_realizarse</string>
    <string name="icono_cantidad_participantes_requeridos">icono_cantidad_participantes_requeridos</string>
    <string name="titulo_formulario_publicar_actividad">FORMULARIO DE ACTIVIDAD</string>
    <string name="imagen_actividad">imagen_actividad</string>
    <string name="icono_recompensa">icono_recompensa</string>
    <string name="publicar_actividad_boton_ok">PUBLICAR</string>
    <string name="publicar_actividad_boton_cancel">CANCELAR</string>
    <string name="spinner_tipo_seleccion">Tipo de Selección</string>
    <string name="spinner_tipo_recompensa">Tipo de Recompensa</string>
    <string name="solicitud_titulo">Solicitud de cuenta Tipo Empresa</string>
    <string name="empresa_nombre_comercial">Nombre Comercial</string>
    <string name="empresa_ruc">RUC</string>
    <string name="empresa_razon_social">Razón Social</string>
    <string name="empresa_correo">Correo</string>
    <string name="empresa_telefono">Telefono</string>
    <string name="empresa_direccion">Dirección</string>
    <string name="spinner_distrito_empresa">Distrito</string>
    <string name="empresa_terminos_condiciones">Acepto los terminos y condiciones</string>
    <string name="empresa_politicas">Acepto las politicas de GoodJob</string>
    <string name="empresa_solicitud_enviar">Enviar Solicitud</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="empresa_codigo_postal">Codigo Postal</string>
    <string name="solicitud_empresa_texto_1">Gracias por querer ser parte de Goodjob</string>
    <string name="solicitud_empresa_texto_2">Nos estaremos comunicando contigo en las próximas 48H atraves del correo que nos brindaste para conocer el resultado de la solicitud</string>
    <string name="solicitud_empresa_texto_3">Atentamente el equipo de Goodjob</string>
    <string name="volver_home">Regresar al Listado de Actividades</string>
    <string name="empresas_no_postulan">Las empresas no pueden postular</string>
    <string name="menu_registrar_producto">Registrar Producto</string>
    <string name="titulo_registrar_producto">Registrar Producto</string>
    <string name="imagen_producto">imagen_producto</string>
    <string name="nombre_producto">Producto</string>
    <string name="cantidad_producto">Cantidad</string>
    <string name="valor_producto">Valor</string>
    <string name="registrar_producto_ok">Registrar</string>
    <string name="lugar_canje">Lugar de canje</string>
    <string name="productos">Productos</string>
    <string name="productos_en_espera">Productos en Espera</string>
    <string name="productos_aceptados">Productos Aceptados</string>
    <string name="actividades">Actividades</string>
    <string name="actividades_espera">Actividades en Espera</string>
    <string name="actividades_aceptadas">Actividades Aceptadas</string>
    <string name="actividades_rechazadas">Actividades Rechazadas</string>
    <string name="actividades_registro">Registrar Actividad</string>
    <string name="productos_rechazados">Productos Rechazados</string>
    <string name="producto">Producto :</string>
    <string name="stock_producto">Stock :</string>
    <string name="valor_puntos_producto">Valor en Ptos :</string>
    <string name="fecha_registro_producto">Fecha Registro :</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="solicitud_empresa">Empresas</string>
    <string name="solicitud_actividades">Actividades</string>
    <string name="solicitud_productos">Productos</string>
    <string name="empresas_espera">Solicitudes de Empresas</string>
    <string name="actividad">Actividad</string>
    <string name="actividad_fecha_registro">Registrada</string>
    <string name="actividad_fecha_realizarse">Se realiza</string>
    <string name="actividad_empresa">Empresa</string>
    <string name="actividad_distrito">Distrito</string>
    <string name="empresa">Empresa</string>
    <string name="empresa_fecha_registrada">Solicitado</string>
    <string name="actividades_solicitud">Solicitudes de Actividades</string>

    <!--Actividad espera detalle-->
    <string name="fecha_fin">Fecha Fin</string>
    <string name="fecha_creacion">Fecha Creacion</string>
    <string name="Empresa"></string>
    <string name="nombre_empresa">Nombre Empresa</string>
    <string name="dia_creacion">Fecha Creacion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
