<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plan_titulo"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginBottom="10sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:text="@string/plan_1"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:drawableLeft="@drawable/check"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:text="@string/plan_2"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:drawableLeft="@drawable/check"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:text="@string/plan_3"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:drawableLeft="@drawable/check"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:text="@string/plan_4"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:drawableLeft="@drawable/check"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:text="@string/plan_5"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:drawableLeft="@drawable/check"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:text="@string/plan_6"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:drawableLeft="@drawable/check"
                />

            <Button
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_4"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/plan_compra_1"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <Button
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_btn3"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/plan_compra_2"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <Button
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_btn2"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/plan_compra_3"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>