<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding_left"
    tools:context=".SolicitudEmpresaResultadoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/solicitud_empresa_texto_1"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:gravity="center_horizontal"
        android:text="@string/solicitud_empresa_texto_2"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:gravity="center_horizontal"
        android:text="@string/solicitud_empresa_texto_3"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnVolverMenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:background="@drawable/btn_uno"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="@dimen/button_elevation"
        android:text="@string/volver_home"
        android:textColor="@drawable/txt_btn_uno" />

</LinearLayout>