<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/fondologin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#d8000000">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/iconlogin"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"/>

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_shape"
            android:ems="10"
            android:focusable="auto"
            android:hint="@string/Tvuser"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="#FF968E8E" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_shape"
            android:ems="10"
            android:hint="@string/TvPass"
            android:inputType="textPassword"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="#FF968E8E"/>

        <TextView
            android:id="@+id/TvRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/TvRegister"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape"
            android:textStyle="bold"
            android:textColor="@color/cardview_light_background"
            />


    </LinearLayout>

</RelativeLayout>